@@ -2,12 +2,14 @@ package com.innovawebJT.lacsc.config;
 
 import java.util.Collection;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.jwt.JwtClaimNames;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
@@ -64,7 +66,7 @@ public class JwtRolesConverter implements Converter<Jwt, AbstractAuthenticationT
         }
         roles = (Collection<String>) resource.get("roles");
         return roles.stream()
-                .map(role -> (GrantedAuthority) () -> role)
-                .toList();
+                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                .collect(Collectors.toList());
     }
 }
